# exa-agent-cli

./: .gitignore  .papercuts.jsonl  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  audit.md  build.rs  dist-workspace.toml  model-performance-journal.md
.github/workflows/: ci.yml
docs/: cli-architecture.md  implementation-plan.md
docs/research/: README.md  exa-api-research.md
docs/v2/: README.md  architecture.md  autonomous-implementation-plan.md  commands.md  contracts.md  decisions.md  ergonomics-checklist.md  implementation-plan-registry-dispatch.md  implementation-plan.md  refactor-registry-driven-dispatch.md
exa-agent-macros/: Cargo.toml
exa-agent-macros/src/: lib.rs
exa-agent-macros/tests/: derive.rs
openapi/: PROVENANCE.md  exa-openapi.json  overlay.toml  team-management.json
src/: auth.rs  config.rs  doctor.rs  error.rs  lib.rs  main.rs  pending.rs  redaction.rs  request.rs  stream.rs  transport.rs
src/cli/: mod.rs
src/output/: envelope.rs  mod.rs
src/registry/: generated.rs  mod.rs
support/: json_canonical.rs
tests/: allowed_golden_diffs.toml  auth.rs  cli.rs  config.rs  docs_contracts.rs  doctor.rs  ergonomics.rs  live_invalid_input.rs  no_network_transport.rs  openapi_parity.rs  pending.rs  redaction.rs  registry.rs  registry_canary.rs  registry_properties.rs  request.rs  request_corpus.rs  transport.rs
tests/ergonomics/: harness.rs  intent_mistakes.rs  robot_docs.rs  scoring.rs  skill.rs
tests/request_corpus/: ResearchController_createResearch.json  ResearchController_getResearch.json  ResearchController_listResearch.json  answer.json  batchMonitors.json  context.json  (+63 more)
work/: README.md  autonomous-run.md  codex-snippets-fixes.md  codex-snippets-spec.md  delegate-cursor-composer-smoke.md
xtask/: Cargo.toml
(+61 files in other folders)
